--- a/src/components/PortfolioIntro/Details.scss
+++ b/src/components/PortfolioIntro/Details.scss
@@ -3,6 +3,7 @@
     background-color: $theme-light-yellow;
     padding: 50px 0;
     .project-details {
+        width: 60%;
         .title {
             display: flex;
             align-items: center;
