--- a/src/components/FeaturesDes/style.scss
+++ b/src/components/FeaturesDes/style.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables/colors';
-@import '../../styles/variables/mixins';
+@import "../../styles/variables/colors";
+@import "../../styles/variables/mixins";
 .feture-info {
     display: flex;
     justify-content: space-between;
@@ -27,7 +27,7 @@
             }
         }
     }
-    .cards {
+    .feature-cards {
         display: flex;
         gap: 40px;
         width: 100%;
@@ -42,23 +42,22 @@
             position: relative;
             flex-wrap: wrap;
             cursor: pointer;
-            // &::before {
-            //     content: "";
-            //     position: absolute;
-            //     width: 40px;
-            //     height: 40px;
-            //     background-color: #ef6d58;
-            //     border-radius: 50px;
-            //     opacity: 0;
-            // }
+            &::before {
+                content: "";
+                position: absolute;
+                width: 40px;
+                height: 40px;
+                background-color: #ef6d58;
+                border-radius: 50px;
+                opacity: 0;
+                transition: all 0.5s ease;
+            }
             &:hover {
                 background-color: $white;
-                height: 150%;
-                transition: all .5s;
-                // &::before {
-                //     opacity: 1;
-                //     top: 20px;
-                // }
+                &::before {
+                    opacity: 1;
+                    top: 20px;
+                }
             }
             .title2 {
                 font-size: 24px;
