--- a/src/components/howWork/style.scss
+++ b/src/components/howWork/style.scss
@@ -7,6 +7,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 90px 0;
+    @include mobile {
+        justify-content: center;
+    }
     .projects {
         max-width: 500px;
         .title2 {
