--- a/src/pages/BlogPage/style.scss
+++ b/src/pages/BlogPage/style.scss
@@ -12,7 +12,7 @@
         .big-blog-list {
             padding: 50px 0;
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             background-color: $theme-light-yellow;
             border-bottom: 1px solid #F3D1BF;
             .blog-card {
