--- a/src/components/Header/Navbar/style.scss
+++ b/src/components/Header/Navbar/style.scss
@@ -1,48 +1,125 @@
+// variables
 @import "../../../styles/variables/colors";
-.navbar {
-    background-color: $theme-primary;
-    // .navbar-toggler {
-    //     border-color: $white;
-    // }
-    // .navbar-toggler-icon {
-    //     color: $white;
-    // }
-    .navbar-nav {
-        justify-content: flex-end;
-        align-items: center;
-        display: flex;
-        gap: 50px;
+@import "../../../styles/variables/mixins";
+.app__navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 22;
+    padding: 20px 0;
+}
+
+.app__navbar-logo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.app__navbar-links {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin: 0;
+    li {
+        .active {
+            border-bottom: 2px solid $theme-secondary;
+            padding-bottom: 5px;
+        }
+        margin: 0 1rem;
+        cursor: pointer;
+        flex-direction: column;
         a {
             text-decoration: none;
-            color: $white;
             font-size: 16px;
-            position: relative;
-            &:hover {
-                &::before {
-                    content: "";
-                    position: absolute;
-                    height: 3px;
-                    bottom: -10px;
-                    left: 0;
-                    background-color: $theme-secondary;
-                    width: 100%;
+            color: $white;
+            font-weight: 500;
+            transition: all 0.3s ease-in-out;
+        }
+    }
+    @media screen and (max-width: 700px) {
+        display: none;
+    }
+}
+
+.app_navbar-menu {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    @media screen and (max-width: 700px) {
+        display: block;
+    }
+    svg {
+        font-size: 25px;
+        width: 70%;
+        height: 70%;
+        color: $theme-secondary;
+        cursor: pointer;
+        @media screen and (max-width: 700px) {
+            width: 100%;
+            height: 100%;
+            padding: 5px;
+        }
+    }
+    .sidebar {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 5;
+        padding: 1rem;
+        width: 50%;
+        height: 100vh;
+        display: flex;
+        justify-content: flex-end;
+        transition: all 0.5s ease-in-out;
+        transform: translateX(100%);
+        align-items: flex-end;
+        flex-direction: column;
+        background-color: $theme-primary;
+        svg {
+            width: 40px;
+            height: 40px;
+            cursor: pointer;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 40px;
+            li {
+                cursor: pointer;
+                transition: all 0.5s;
+                .active {
+                    border-bottom: 2px solid $theme-secondary;
+                    padding-bottom: 5px;
+                }
+                a {
+                    text-decoration: none;
+                    color: $white;
+                    text-transform: uppercase;
+                    font-size: 1rem;
+                    font-weight: 500;
+                    transition: all 0.3s ease-in-out;
                 }
             }
         }
     }
-    .navbar-collapse {
-        justify-content: center;
-    }
     .active {
-        position: relative;
-        &::before {
-            content: "";
-            height: 3px;
-            bottom: -10px;
-            left: 0;
-            background-color: $theme-secondary;
-            width: 100%;
-            position: absolute;
-        }
+        transform: translateX(0);
     }
 }
