Fix: unnecessary code

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,6 +3,7 @@
 @import "../styles/variables/colors";
 @import "../styles/variables/mixins";
 @import "../styles/xtras";
+@import 'bootstrap/dist/css/bootstrap.min.css';
 // theme styles files
 // custom css
 * {
