--- a/src/components/OurTeam/style.scss
+++ b/src/components/OurTeam/style.scss
@@ -44,6 +44,12 @@
                     background-color: $theme-secondary;
                 }
             }
+            .card {
+                min-width: 25%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
         }
     }
 }
