--- a/src/components/PortfolioIntro/style.scss
+++ b/src/components/PortfolioIntro/style.scss
@@ -39,10 +39,14 @@
         margin: 0 20px;
         padding: 5px 20px;
     }
+    .activeBtn {
+        background-color: red;
+    }
 }
 
 .portfolio_container {
     flex-wrap: wrap;
+    padding-top: 50px;
     .portfolio-card {
         cursor: pointer;
     }
