--- a/src/pages/AboutPage/style.scss
+++ b/src/pages/AboutPage/style.scss
@@ -3,6 +3,7 @@
 .about-page {
     .hero_section {
         background-color: $theme-primary;
+        padding: 0 20px;
     }
     .card-container {
         // height: 500px;
@@ -35,12 +36,10 @@
                 flex-direction: column-reverse;
             }
             .thumbs {
-                max-width: 70%;
-                @include mobile {
-                    width: 70%;
-                }
+                max-width: 100%;
                 img {
                     width: 100%;
+                    height: 100%;
                 }
             }
             .studio {
@@ -99,6 +98,7 @@
     // How we work????????
     .how-work-section {
         background-color: $theme-light-yellow;
+        padding: 0 20px;
         @include mobile {
             padding: 20px;
         }
