--- a/src/components/Features/style.scss
+++ b/src/components/Features/style.scss
@@ -4,9 +4,13 @@
     display: flex;
     padding: 90px 0;
     gap: 150px;
-    flex-wrap: wrap;
     @include mobile {
         gap: 20px;
+        flex-direction: column;
+    }
+    @include tablet {
+        gap: 10px;
+        flex-direction: column;
     }
     .business-features {
         .title2 {
@@ -21,7 +25,9 @@
             color: #391400;
             @include mobile {
                 font-size: 40px;
-                width: 100%;
+            }
+            @include tablet {
+                max-width: 100%;
             }
         }
         .description {
@@ -49,9 +55,12 @@
         }
     }
     .thumb {
-        width: 550px;
-        // height: 550px;
+        max-width: 100%;
+        @include tablet {
+            max-width: 90%;
+        }
         img {
+            width: 100%;
             width: 100%;
         }
     }
