--- a/src/components/FormSection/style.scss
+++ b/src/components/FormSection/style.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables/colors";
+@import "../../styles/variables/mixins";
 .contact_form {
     background-color: $theme-light-yellow;
     min-height: 100vh;
@@ -6,6 +7,9 @@
     position: relative;
     justify-content: center;
     align-items: center;
+    @include mobile {
+        padding: 20px;
+    }
     .title1 {
         color: $theme-secondary;
     }
