--- a/src/components/NewLetter/style.scss
+++ b/src/components/NewLetter/style.scss
@@ -1,10 +1,17 @@
 @import "../../styles/variables/colors";
+@import "../../styles/variables/mixins";
 .news_letter {
     padding: 90px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #F3D1BF;
+    @include mobile {
+        flex-direction: column;
+    }
+    @include tablet {
+        flex-direction: column;
+    }
     .title1 {
         font-size: 50px;
         font-weight: 500;
@@ -14,12 +21,19 @@
             display: flex;
             align-items: center;
             gap: 30px;
+            width: 100%;
             .ant-input {
-                width: 370px;
+                max-width: 100%;
                 padding: 8px 10px;
                 border: 1px solid #f3d1bf;
                 outline: none;
                 border-radius: 5px;
+                @include mobile {
+                    // max-width: 300px;
+                }
+                @include iphone5 {
+                    // max-width: 200px;
+                }
                 &:focus {
                     border: none;
                 }
