--- a/src/components/PortfolioIntro/style.scss
+++ b/src/components/PortfolioIntro/style.scss
@@ -39,7 +39,7 @@
         margin: 0 20px;
         padding: 5px 20px;
     }
-    .activeBtn {
+    .active {
         background-color: red;
     }
 }
