--- a/src/components/ServiceIntro/ServiceInfo/style.scss
+++ b/src/components/ServiceIntro/ServiceInfo/style.scss
@@ -18,6 +18,7 @@
         font-weight: 500;
         @include mobile {
             margin-left: 0;
+            max-width: 100%;
         }
     }
     .card-container {
