--- a/src/components/contactHeroposter/style.scss
+++ b/src/components/contactHeroposter/style.scss
@@ -1,14 +1,35 @@
 @import "../../styles/variables/colors";
+@import "../../styles/variables/mixins";
 .contact_hero {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 20px;
+    @include mobile {
+        flex-direction: column-reverse;
+    }
+    @include tablet {
+        flex-direction: column-reverse;
+    }
+    .poster {
+        max-width: 100%;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
     .text_info {
         padding: 0 45px;
         .title {
             font-size: 56px;
             max-width: 329px;
             color: $white;
+            @include mobile {
+                max-width: 100%;
+            }
+            @include tablet {
+                max-width: 100%;
+            }
         }
         .description {
             font-size: 16px;
@@ -17,9 +38,10 @@
             font-weight: 100;
         }
         .contact_btn {
-            .ant-btn {
+            button {
                 border-radius: 5px;
                 padding: 7px 9px;
+                border: none;
                 a {
                     color: $black;
                 }
