--- a/src/pages/ServicePage/styles.scss
+++ b/src/pages/ServicePage/styles.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables/colors";
+@import "../../styles/variables/mixins";
 .services-page {
     .service_intro_section {
         background-color: $theme-primary;
@@ -9,6 +10,7 @@
     }
     .services {
         background-color: $theme-light-yellow;
+        padding: 0 20px;
         .service-provide {
             padding: 90px 0;
             .title2 {
@@ -18,9 +20,20 @@
             .service-flex {
                 display: flex;
                 justify-content: space-between;
-                flex-wrap: wrap;
+                @include mobile {
+                    flex-direction: column;
+                }
+                @include tablet {
+                    flex-direction: column;
+                }
                 .highlight_info {
                     max-width: 470px;
+                    @include mobile {
+                        max-width: 100%;
+                    }
+                    @include tablet {
+                        max-width: 100%;
+                    }
                     .title {
                         font-size: 40px;
                         color: #391400;
@@ -31,6 +44,12 @@
                     color: #391400;
                     font-size: 16px;
                     font-weight: 100;
+                    @include mobile {
+                        max-width: 100%;
+                    }
+                    @include tablet {
+                        max-width: 100%;
+                    }
                 }
             }
         }
@@ -62,6 +81,9 @@
                 .ant-collapse-content {
                     border: 1px solid #f3d1bf;
                     background-color: $theme-light-yellow;
+                }
+                .ant-collapse-header-text {
+                    font-size: 50px;
                 }
             }
             .ant-collapse {
@@ -113,6 +135,12 @@
         .container {
             .how-work {
                 justify-content: space-between;
+                @include mobile {
+                    gap: 50px;
+                }
+                @include tablet {
+                    gap: 50px;
+                }
             }
         }
     }
