--- a/src/components/ServiceIntro/style.scss
+++ b/src/components/ServiceIntro/style.scss
@@ -2,78 +2,85 @@
 @import "../../styles/variables/mixins";
 .service-intro {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     padding: 60px 0;
+    gap: 20px;
     margin: 0 auto;
     @include mobile {
         gap: 20px;
         flex-direction: column;
+        justify-content: center;
+    }
+    @include tablet {
+        gap: 20px;
+        justify-content: center;
+        flex-direction: column;
     }
     .thumb {
-        width: 70%;
-        @include mobile {
-            max-width: 100%;
-        }
+        max-width: 100%;
+        // @include mobile {
+        //     max-width: 100%;
+        // }
         img {
             width: 100%;
+            height: 100%;
         }
     }
-    .service-help {
-        // background-color: red;
-        width: 100%;
-        .title2 {
-            font-size: 16px;
-            font-weight: 100;
-            color: $theme-secondary;
+}
+
+.service-help {
+    // background-color: red;
+    width: 500px;
+    .title2 {
+        font-size: 16px;
+        font-weight: 100;
+        color: $theme-secondary;
+    }
+    .title1 {
+        font-size: 56px;
+        color: #391400;
+        max-width: 404px;
+        font-weight: 500;
+        @include mobile {
+            width: 100%;
+            font-size: 30px;
         }
-        .title1 {
-            font-size: 56px;
-            color: #391400;
-            max-width: 404px;
-            font-weight: 500;
-            @include mobile {
+    }
+    .description {
+        max-width: 500px;
+        font-size: 20px;
+        font-weight: 100;
+    }
+    .serice-user-info {
+        display: flex;
+        // align-items: center;
+        gap: 30px;
+        .thumb {
+            width: 70px;
+            height: 70px;
+            img {
                 width: 100%;
-                font-size: 30px;
             }
         }
-        .description {
-            max-width: 500px;
-            font-size: 20px;
-            font-weight: 100;
-        }
-        .serice-user-info {
-            display: flex;
-            // align-items: center;
-            gap: 30px;
-            .thumb {
-                width: 10%;
-                @include mobile {
-                    width: 35%;
-                }
-                img {
-                    width: 100%;
-                }
+        .info {
+            .description {
+                margin: 0;
+                color: #391400;
+                font-size: 14px;
             }
-            .info {
-                .description {
-                    margin: 0;
+            .title5 {
+                font-weight: 100;
+                color: #391400;
+            }
+            .btn {
+                margin-top: 50px;
+                @include mobile {}
+                a {
+                    box-shadow: $shadowSecondary;
                     color: #391400;
-                    font-size: 14px;
-                }
-                .title5 {
-                    font-weight: 100;
-                    color: #391400;
-                }
-                .btn {
-                    margin-top: 50px;
-                    @include mobile {}
-                    a {
-                        box-shadow: $shadowSecondary;
-                        color: #391400;
-                        padding: 15px 25px;
-                        border-radius: 5px;
-                        background-color: $white;
-                    }
+                    padding: 15px 25px;
+                    border-radius: 5px;
+                    background-color: $white;
                 }
             }
         }
