--- a/src/components/PortfolioIntro/style.scss
+++ b/src/components/PortfolioIntro/style.scss
@@ -36,11 +36,19 @@
 
 .btn_group {
     button {
+        border: none;
+        border-radius: 5px;
+        outline: none;
         margin: 0 20px;
         padding: 5px 20px;
+        &:active {
+            background-color: $theme-secondary;
+            color: white;
+        }
     }
     .active {
-        background-color: red;
+        background-color: $theme-secondary;
+        color: white;
     }
 }
 
