--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -39,6 +39,9 @@ body {
     color: $theme-primary-dark;
     &::-webkit-scrollbar {
         width: 1em;
+        @include mobile {
+            display: none;
+        }
     }
     &::-webkit-scrollbar-track {
         box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -142,7 +145,7 @@ a {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        @include mobile {
+        @include tablet {
             flex-direction: column;
             gap: 20px;
             padding: 20px;
